# bw-work

./: .gitignore  CLAUDE.md  README.md  TASK.md  cc-hall-task.md  deploy.sh  design.pen  docker-compose.yml  hall-design-tree.txt  hall-preview.html  hall-standalone.html  requirements-dev.txt
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: run_discussion.py
backend/src/: __init__.py
backend/src/admin/: __init__.py  audit_log.py  auth.py  config_store.py  crypto.py  database.py  models.py
backend/src/agents/: __init__.py  base.py  creative_director.py  doc_organizer.py  doc_writer.py  document_generator.py  lead_planner.py  market_director.py  moderators.py  number_designer.py  operations_analyst.py  player_advocate.py  summarizer.py  system_designer.py  tech_director.py  visual_concept.py
backend/src/api/: main.py
backend/tests/: __init__.py  conftest.py  test_agent_tools.py  test_agents.py  test_api.py  test_batch_runner.py  test_checkpoint.py  test_crew.py  test_design_doc.py  test_design_docs.py  test_discussion.py  test_discussion_v2_fixes.py  test_dynamic_discussion.py  test_gdd_parsers.py  test_image_backends.py  test_image_integration.py  test_memory.py  test_mention_parser.py  test_module_detector.py  test_new_features.py  test_new_features_batch2.py  test_new_features_batch3.py  test_parallel_discussion.py  test_project_integration.py  test_project_memory.py  test_prompt_engineer.py  test_sequential_execution.py  test_v2_integration.py  test_vector_store.py  test_websocket.py
docs/: REFACTOR_SPEC.md  (+7 more)
(+256 files in other folders)
